snapshots/syntax/library/statements/unlock/unlock_preserves_whitespace.snap
---
source: src/syntax/library/statements/file_operations/unlock.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: UnlockStatement
      children:
        - kind: UnlockKeyword
          text: Unlock
        - kind: Whitespace
          text: "    "
        - kind: Octothorpe
          text: "#"
        - kind: IntegerLiteral
          text: "1"
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: IntegerLiteral
          text: "5"
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
